--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Kręcimy.pl</title>
+  <title>krecimy3D.pl</title>
 </head>
 <body>
-  <h1>Witamy w Kręcimy3D.pl</h1>
+  <h1>Witamy w krecimy3D.pl</h1>
   <p>Twój sklep z drukiem 3D</p>
 </body>
 </html>
