--- a/index.html
+++ b/index.html
@@ -2,10 +2,102 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>krecimy3D.pl</title>
+  <title>Kręcimy3D</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #222;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      color: #0f0;
+    }
+    main {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 20px;
+      gap: 20px;
+    }
+    .product {
+      background: #222;
+      border: 1px solid #333;
+      border-radius: 10px;
+      width: 200px;
+      padding: 15px;
+      text-align: center;
+      transition: transform 0.2s;
+    }
+    .product:hover {
+      transform: scale(1.05);
+    }
+    .product img {
+      max-width: 100%;
+      border-radius: 5px;
+    }
+    .product h2 {
+      font-size: 18px;
+      margin: 10px 0 5px;
+    }
+    .product p {
+      font-size: 14px;
+      margin: 5px 0;
+    }
+    .product button {
+      margin-top: 10px;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 5px;
+      background: #0f0;
+      color: #111;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: #222;
+      margin-top: 20px;
+      font-size: 14px;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
-  <h1>Witamy w krecimy3D.pl</h1>
-  <p>Twój sklep z drukiem 3D</p>
+  <header>
+    <h1>Kręcimy3D</h1>
+    <p>Twój sklep z drukiem 3D – ucz się, trenować layout, zdjęcia i opisy produktów!</p>
+  </header>
+  <main>
+    <div class="product">
+      <img src="https://via.placeholder.com/150" alt="Produkt 1">
+      <h2>Keycap Gamingowy</h2>
+      <p>Kolorowy wydruk 3D, idealny do klawiatur.</p>
+      <button>Kup teraz</button>
+    </div>
+    <div class="product">
+      <img src="https://via.placeholder.com/150" alt="Produkt 2">
+      <h2>Uchwyt na słuchawki</h2>
+      <p>Praktyczny uchwyt do biurka z wydruku 3D.</p>
+      <button>Kup teraz</button>
+    </div>
+    <div class="product">
+      <img src="https://via.placeholder.com/150" alt="Produkt 3">
+      <h2>Figurka Postaci</h2>
+      <p>Figurka do dekoracji biurka lub kolekcji.</p>
+      <button>Kup teraz</button>
+    </div>
+  </main>
+  <footer>
+    © 2025 Kręcimy3D – Wszystkie prawa zastrzeżone
+  </footer>
 </body>
 </html>
